--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="jpg" href="%PUBLIC_URL%/11.jpg" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/reset.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
