--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link rel="jpg" href="%PUBLIC_URL%/11.jpg" />
-  <link rel="stylesheet" href="%PUBLIC_URL%/css/reset.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>redux</title>
 </head>
 <body>
-  <div id="root"></div>
+	<div id="root"></div>
+	
 </body>
 </html>
